Kind-K8s/workshop_mern_deployed/04_mern_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: mernstack
  annotations:    
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mern-demo.site
    http:
      paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactjs-service
                port:
                  number: 80
